--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_grey_rounded_blue_border.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_grey_rounded_blue_border.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
     
     <solid android:color="@color/white_light_more_grey"/>
-    <corners android:radius="@dimen/button_corner_radius"/>
+    <corners android:radius="@dimen/image_bg_stroke"/>
     <stroke 
         android:width="2px"
         android:color="@color/blue_btn_pressed"
