--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -840,7 +840,7 @@
                                     android:gravity="center"
                                     android:singleLine="true"
                                     android:text=" "
-                                    android:textColor="@color/white"
+                                    android:textColor="@color/grey_dark_button"
                                     android:textSize="34px"/>
 
                                 <!-- reached distance km, time, fare layout -->
