merge_feature_language_translation_to_merge_pushy_location_new_UIChanges: variables added to string

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
@@ -65,7 +65,7 @@
                 android:id="@+id/forgotPasswordHelpText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enter_email_to_have_instruction"
+            android:text="@string/enter_phone_to_have_instruction"
             android:textColor="@color/white"
             android:textSize="36px" 
             android:layout_margin="35px"
@@ -110,7 +110,7 @@
             android:layout_height="99px"
             android:layout_marginTop="45px"
             android:background="@drawable/blue_btn_selector"
-            android:text="Send"
+            android:text="@string/send"
             android:textColor="@drawable/white_color_selector"
                         android:textSize="@dimen/button_text_size"  />
         
