--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_history.xml
@@ -123,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="12px"
-                    android:text="Referral Money"
+                    android:text="@string/referral_money"
                     android:textColor="@color/white"
                     android:textSize="28px"
                     android:textStyle="bold"/>
