merge_pushy_new_bug_fixes_for_213_live: ride request UI changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
@@ -77,8 +77,8 @@
                 android:layout_marginTop="10px"
                 android:singleLine="true"
                 android:text="30 sec ago"
-                android:textColor="@color/black_translucent"
-                android:textSize="30px"
+                android:textColor="@color/black_grey"
+                android:textSize="32px"
                 android:layout_below="@+id/textViewRequestDistance"
                 />
 
