--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details.xml
@@ -594,7 +594,7 @@
                     android:layout_width="100px"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
-                    android:text="@string/to"
+                    android:text="@string/to_end"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="28px"/>
 
