bugfix: Monthly online hours, heat map visibility gone in ride

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -168,43 +168,21 @@
     </RelativeLayout>
 
 
-    <!--<RelativeLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="120px"-->
-        <!--android:layout_below="@+id/driverDetailsRL">-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/textViewmonthlyText"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerInParent="true"-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/monthly"-->
-            <!--android:textColor="@color/black_grey"-->
-            <!--android:textSize="48px" />-->
 
 
-    <!--</RelativeLayout>-->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:splitMotionEvents="false"
-        >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="648px"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="24px"
             android:layout_marginRight="24px"
-            android:layout_marginBottom="30px"
-            android:layout_alignParentBottom="true"
+            android:layout_marginTop="55px"
+            android:layout_below="@+id/driverDetailsRL"
             android:background="@drawable/background_grey_rounded_blue_border">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="107px">
+                android:layout_height="117px">
 
                 <TextView
                     android:id="@+id/textViewmonthlyText"
@@ -229,7 +207,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="107px">
+                android:layout_height="117px">
 
             <TextView
                 android:id="@+id/textViewMonthlyText"
@@ -264,7 +242,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="107px">
+                android:layout_height="117px">
 
                 <TextView
                     android:id="@+id/textViewRidesTakenText"
@@ -298,7 +276,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="107px">
+                android:layout_height="117px">
 
                 <TextView
                     android:id="@+id/textViewRidesMissedText"
@@ -333,7 +311,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="107px">
+                android:layout_height="117px">
 
                 <TextView
                     android:id="@+id/textViewRidesCancelledText"
@@ -369,7 +347,9 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="107px">
+                android:layout_height="107px"
+                android:visibility="gone"
+                >
 
                 <TextView
                     android:id="@+id/textViewOnlineHoursText"
@@ -401,7 +381,7 @@
 
 
 
-    </RelativeLayout>
+
     </RelativeLayout>
 
 </LinearLayout>
